--- a/Project.toml
+++ b/Project.toml
@@ -10,3 +10,6 @@ MathOptSetDistances = "3b969827-a86c-476c-9527-bb6f1a8fbad5"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SuiteSparse = "4607b0f0-06f3-5cda-b6b1-a6196a1729e9"
+
+[compat]
+MathOptSetDistances = "0.2"
