Rename to Zaphod

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "SimpleConicADMM"
+name = "Zaphod"
 uuid = "ebc8f21c-f6bd-4646-ac6f-c5a9ad36a26b"
 authors = ["Benoît Legat <benoit.legat@gmail.com>"]
 version = "0.1.0"
