--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,12 +40,12 @@ jobs:
             ${{ runner.os }}-test-${{ env.cache-name }}-
             ${{ runner.os }}-test-
             ${{ runner.os }}-
-      - name: MOISD#bl/scaled_psd
+      - name: MOSD
         shell: julia --project=@. {0}
         run: |
           using Pkg
           Pkg.add([
-              PackageSpec(name="MathOptSetDistances", rev="bl/scaled_psd"),
+              PackageSpec(name="MathOptSetDistances", rev="master"),
           ])
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
