--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,4 +1,5 @@
 [deps]
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
-Zaphod = "ebc8f21c-f6bd-4646-ac6f-c5a9ad36a26b"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Zaphod = "ebc8f21c-f6bd-4646-ac6f-c5a9ad36a26b"
